<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Spinner
            android:id="@+id/input_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/switch_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onClick"
            android:src="@drawable/ic_baseline_swap_horiz_24"
            android:tint="@color/white" />

        <Spinner
            android:id="@+id/outputSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="TEST" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:tint="@color/white" />

    <TextView
        android:id="@+id/answer_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="TEST" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/divider" >

        <Button
            android:id="@+id/seven_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/eight_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/nine_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/f_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/f"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/clear_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/four_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/five_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/six_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/e_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/e"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/delete_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:src="@drawable/ic_baseline_backspace_24"
            android:textColor="@color/white"
            android:tint="@color/white" />

        <Button
            android:id="@+id/one_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/two_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/three_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/d_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/d"
            android:textColor="@color/white"
            android:textSize="24sp" />

<!--        <Button-->
<!--            android:id="@+id/decimal_button"-->
<!--            style="?android:attr/borderlessButtonStyle"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_row="2"-->
<!--            android:layout_rowWeight="1"-->
<!--            android:layout_column="4"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:layout_margin="1dp"-->
<!--            android:background="@color/black"-->
<!--            android:onClick="onClick"-->
<!--            android:text="@string/decimal"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="24sp" />-->

        <Button
            android:id="@+id/zero_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/a_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/a"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/b_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/b"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/c_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/equals_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/black"
            android:onClick="onClick"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </GridLayout>
</LinearLayout>